add modal cityV2

--- a/app/html/modal.pug
+++ b/app/html/modal.pug
@@ -43,6 +43,7 @@ style(type='text/css').
 				.btn--md.btn--mark.modal-get(data-modal="staff-true") Карьера сообщение | data-modal="staff-true"
 				.btn--md.btn--mark.modal-get(data-modal="bonus-descr") Бонусные баллы | data-modal="staff-descr"
 				.btn--md.btn--mark.modal-get(data-modal="city") Список городов | data-modal="city"
+				.btn--md.btn--mark.modal-get(data-modal="citySelect") Список городов V2 | data-modal="citySelect"
 				.btn--md.btn--mark.modal-get(data-modal="area") Выбор доставки по карте | data-modal="area"
 				.btn--md.btn--mark.modal-get(data-modal="address-bad") Нет доставки | data-modal="address-bad"
 				//.btn--md.btn--mark.modal-get(data-modal="order") Заявка | data-modal="code "
