--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -3050,7 +3050,6 @@ l
 	.input
 		transition initial
 		width: 100%
-		margin-right: 20px
 		br(0)
 		border 0
 		border-bottom 1px solid $border-color
@@ -3105,7 +3104,7 @@ l
 .city-wrap
 	+below(768px)
 		height: 100%
-	height: 400px
+	max-height: 400px
 	position relative
 	overflow scroll
 	margin-top: 40px
@@ -3135,10 +3134,37 @@ l
 .city-list-el--active
 	font-weight: 700
 
+
+.city-row-wrap
+	max-height 400px
+	margin-right: -20px
+	padding-right: 20px
+.city-row
+	padding: 16px
+	border 1px solid $border-color
+	br(12px)
+	margin-bottom: 12px
+	line-height: 1.6
+	font-size: 12px
+	color $dark
+	cp()
+	tr()
+	&:hover
+		color $mark
+		.city-row__name
+			color $mark
+		border-color $mark
+.city-row__name
+	display inline-block
+	font-weight: 700
+	font-size: 18px
+	color black
+	margin-right: 6px
+	tr()
 .search__icon
 	position absolute
 	top calc(50% - 12px)
-	right: 36px
+	right: 10px
 	cp()
 	flex(mid)
 	.icon
