add modal cityV2 + mac scroll

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -3139,6 +3139,7 @@ l
 	max-height 400px
 	margin-right: -20px
 	padding-right: 20px
+	overflow auto
 .city-row
 	padding: 16px
 	border 1px solid $border-color
